# kvbm

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  pyproject.toml
.cargo/: config.toml
crates/: Cargo.toml
crates/kvbm-client/: Cargo.toml  build.rs
crates/kvbm-client/src/: client.rs  error.rs  handle.rs  lib.rs  proto.rs
crates/kvbm-client/tests/: smoke.rs
crates/kvbm-common/: Cargo.toml
crates/kvbm-common/src/: block.rs  block_layout_mode.rs  coord.rs  lib.rs  shape.rs  slice.rs  strides.rs  tensor.rs
crates/kvbm-common/src/placement/: mod.rs
crates/kvbm-common/src/resource/: mod.rs
crates/kvbm-common/src/retention/: mod.rs
crates/kvbm-common/tests/: striped_block_placement.rs
crates/kvbm-config/: Cargo.toml  README.md
crates/kvbm-config/src/: cache.rs  control.rs  debug.rs  disagg.rs  discovery.rs  hub.rs  lib.rs  messenger.rs  metrics.rs  nixl.rs  offload.rs  onboard.rs  overrides.rs  remote_search.rs  v1_compat.rs
crates/kvbm-connector/: CONTRACT.md  Cargo.toml
crates/kvbm-connector/src/: config.rs  lib.rs
crates/kvbm-connector/src/common/: consolidator.rs  finished.rs  metadata.rs  mod.rs  output.rs  request.rs
crates/kvbm-connector/src/connector/: disk_cleanup.rs  metadata.rs  mod.rs  surface.rs
crates/kvbm-connector/src/connector/engine/: mod.rs
crates/kvbm-connector/src/connector/leader/: construct.rs  hub_client.rs  hub_handshake.rs  hub_indexer.rs  mod.rs  peer_resolver.rs  sink.rs  slot.rs  state.rs
crates/kvbm-connector/src/connector/shim/: mod.rs
crates/kvbm-connector/src/connector/worker/: client.rs  gpu.rs  init.rs  mod.rs  protocol.rs  state.rs  velo.rs
crates/kvbm-connector/src/testing/: mod.rs
crates/kvbm-connector/src/vllm/: config.rs  layout.rs  mod.rs
crates/kvbm-consolidator/src/: lib.rs
crates/kvbm-consolidator/src/egress/: zmq_publisher.rs
crates/kvbm-consolidator/src/ingress/: kvbm_bridge.rs  zmq_subscriber.rs
crates/kvbm-consolidator/tests/: audit.rs
crates/kvbm-engine/: CLAUDE.md  Cargo.toml
crates/kvbm-engine/docs/: control-transfer.md  offload-developer.md  offload.md  onboarding.md
crates/kvbm-engine/src/: audit.rs  lib.rs
crates/kvbm-engine/src/collectives/: bootstrap.rs  mod.rs  nccl.rs  nccl_ffi.rs  stub.rs
crates/kvbm-engine/src/leader/: consolidator.rs  describe_map.rs  instance.rs  layout_compat.rs  mod.rs  onboarding.rs  staging.rs  state.rs  types.rs
crates/kvbm-engine/src/p2p/: control.rs  dispatch.rs  mod.rs  parallelism.rs  service.rs  transport.rs
crates/kvbm-engine/src/remote/: mod.rs
crates/kvbm-engine/src/runtime/: builder.rs  mod.rs
crates/kvbm-engine/src/testing/: asymmetric_tp_session.rs  distributed.rs  messenger.rs  mod.rs
crates/kvbm-engine/src/tiering/: mod.rs
crates/kvbm-engine/src/worker/: coordinated.rs  mod.rs  physical.rs  protocol.rs
crates/kvbm-engine/tests/: collective_root_contract.rs  consolidator_drop.rs  consolidator_spawn.rs  control_modules.rs  layout_compat.rs  session_bidirectional.rs  session_pull_pairing.rs  session_seal_immutability.rs  session_stream_ordering.rs  velo_session_loopback.rs  velo_session_peer_resolver.rs
crates/kvbm-hub/: CLAUDE.md  Cargo.toml
crates/kvbm-hub/src/: client.rs  config.rs  handlers.rs  lib.rs  protocol.rs  registry.rs  render.rs  server.rs  web.rs
crates/kvbm-hub/src/features/: cli.rs  http.rs  mod.rs
crates/kvbm-hub/tests/: cd_layout_compat.rs  control_describe.rs  control_gating.rs  control_metrics.rs  control_modules.rs  control_routes.rs  heartbeat_integration.rs  hub_config.rs  indexer.rs  integration.rs  kvbmctl_render.rs  tier_push_integration.rs  web_ui_serving.rs
crates/kvbm-hub/web/: app.js  index.html  style.css  tokens.css
crates/kvbm-kernels/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/kvbm-kernels/cuda/: stubs.c  tensor_kernels.cu
crates/kvbm-kernels/examples/: kvbench.rs
crates/kvbm-kernels/src/: lib.rs  tensor_kernels.rs
crates/kvbm-kernels/tests/: kernel_roundtrip.rs  memcpy_batch.rs
crates/kvbm-logical/: Cargo.toml
crates/kvbm-logical/src/: branch_tracker.rs  lib.rs
crates/kvbm-logical/src/integrations/: request.rs
crates/kvbm-logical/src/metrics/: mod.rs
crates/kvbm-logical/src/resources/: mod.rs
crates/kvbm-logical/src/testing/: config.rs  mod.rs
crates/kvbm-observability/: Cargo.toml
crates/kvbm-observability/src/: cache.rs  cd.rs  collector.rs  lib.rs  observability.rs  server.rs  stats.rs  transfer.rs
crates/kvbm-physical/: Cargo.toml  README.md
crates/kvbm-physical/docs/: v1_migration.md
crates/kvbm-physical/src/layout/: builder.rs  config.rs  fully_contiguous.rs  kv_block_layout.rs  layer_separate.rs  mod.rs  physical.rs  ragged_layer_separate.rs  serialize.rs  tests.rs  view.rs
crates/kvbm-physical/src/manager/: canonical.rs  metadata.rs  mod.rs
crates/kvbm-physical/src/transfer/: benchmark.rs  capabilities.rs  context.rs  graph_cache.rs  kernel_catalog.rs  lower.rs  mod.rs  options.rs  plan.rs  prepared.rs  strategy.rs  testing.rs  validation.rs
crates/kvbm-protocols/: Cargo.toml
crates/kvbm-protocols/src/: disagg.rs  lib.rs
crates/kvbm-protocols/src/connector/: actions.rs  engine.rs  handles.rs  mod.rs  noop.rs  protocol.rs  tests.rs
crates/kvbm-protocols/src/control/: client.rs  layout_compat.rs  mod.rs
crates/kvbm-runtime/: Cargo.toml
crates/kvbm-runtime/src/: lib.rs
crates/kvbm-service/: Cargo.toml  DESIGN.md  build.rs
crates/kvbm-service/docs/: hugepages.md
crates/kvbm-service/proto/: kvbm_service.proto
crates/kvbm-service/src/: error.rs  lib.rs  metrics.rs  mode.rs  proto.rs
crates/kvbm-service/src/config/: flags.rs  mod.rs
crates/kvbm-service/src/container/: mod.rs
crates/kvbm-service/src/instance/: kvbm.rs  mod.rs
crates/kvbm-service/src/pool/: config.rs  mod.rs  slab.rs
crates/kvbm-service/src/registry/: client.rs  key.rs  lifecycle.rs  mod.rs
crates/kvbm-service/src/server/: grpc.rs  http.rs  mod.rs  shutdown.rs
crates/kvbm-service/tests/: http_endpoints.rs  key_conflict.rs  pool_alloc.rs  registry_capacity.rs  shutdown_broadcasts.rs
src/: lib.rs  (+2 more)
(+188 files in other folders)
