# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "kvbm-client",
    "kvbm-common",
    "kvbm-config",
    "kvbm-connector",
    "kvbm-consolidator",
    "kvbm-engine",
    "kvbm-hub",
    "kvbm-kernels",
    "kvbm-logical",
    "kvbm-observability",
    "kvbm-physical",
    "kvbm-protocols",
    "kvbm-runtime",
    "kvbm-service",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
description = "Dynamo Inference Framework"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"
keywords = ["llm", "genai", "inference", "nvidia", "distributed"]

[workspace.dependencies]
# kvbm crates (path deps within this workspace)
kvbm-client = { path = "kvbm-client" }
kvbm-common = { path = "kvbm-common" }
kvbm-config = { path = "kvbm-config" }
kvbm-connector = { path = "kvbm-connector" }
kvbm-consolidator = { path = "kvbm-consolidator" }
kvbm-engine = { path = "kvbm-engine" }
kvbm-hub = { path = "kvbm-hub" }
kvbm-kernels = { path = "kvbm-kernels" }
kvbm-logical = { path = "kvbm-logical" }
kvbm-observability = { path = "kvbm-observability" }
kvbm-physical = { path = "kvbm-physical" }
kvbm-protocols = { path = "kvbm-protocols" }
kvbm-runtime = { path = "kvbm-runtime" }
kvbm-service = { path = "kvbm-service" }

# dynamo crates (git deps — branch exposes the 4 leaf libs the kvbm tree needs)
# NOTE: dynamo-kv-router is intentionally featureless. The `runtime-protocols`
# feature pulls `dynamo-runtime` (and its dynamo-core closure); kvbm-consolidator
# only consumes `dynamo_kv_router::zmq_wire`, which is available without features.
dynamo-tokens = { git = "https://github.com/ai-dynamo/dynamo", branch = "ryan/kvbm-engine-service" }
dynamo-memory = { git = "https://github.com/ai-dynamo/dynamo", branch = "ryan/kvbm-engine-service" }
dynamo-kv-router = { git = "https://github.com/ai-dynamo/dynamo", branch = "ryan/kvbm-engine-service" }
dynamo-kv-hashing = { git = "https://github.com/ai-dynamo/dynamo", branch = "ryan/kvbm-engine-service" }

# velo (registry — 0.4.1 / 0.2.0 are published on crates.io)
velo     = { version = "0.4.1" }
velo-ext = { version = "0.2.0" }

# External dependencies (copied verbatim from dynamo root [workspace.dependencies])
anyhow = { version = "1" }
async-nats = { version = "0.45.0", features = ["service"] }
async-trait = { version = "0.1" }
axum = { version = "=0.8.4", features = ["macros", "ws"] }
blake3 = { version = "1" }
bytes = { version = "1" }
clap = { version = "4", features = ["derive", "env"] }
cudarc = { version = "=0.19.3", features = ["cuda-version-from-build-system", "fallback-latest"] }
dashmap = { version = "6.1" }
derive_builder = { version = "0.20" }
derive-getters = { version = "0.5" }
figment = { version = "0.10", features = ["env", "toml"] }
futures = { version = "0.3" }
humantime = { version = "2.2.0" }
hyper-util = { version = "=0.1.17" }
indexmap = { version = "2" }
libc = { version = "0.2" }
libloading = "0.8.9"
oneshot = { version = "0.1.13", features = ["std", "async"] }
parking_lot = "0.12.5"
prometheus = { version = "0.14" }
prost = { version = "0.13" }
rand = { version = "0.9.2" }
reqwest = { version = "0.12.24", default-features = false, features = [
    "multipart",
    "json",
    "stream",
    "rustls-tls",
] }
rmp-serde = { version = "1" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
tempfile = "3"
thiserror = { version = "2.0.17" }
tmq = { version = "0.5.0" }
tokio = { version = "=1.48.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.17", features = ["codec", "net", "rt", "io-util"] }
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "json",
] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

[profile.dev]
# opt-level = 3
# Mirror the wheel root's lean dev setting: `line-tables-only` keeps file:line
# in RUST_BACKTRACE panics while shedding the bulk of DWARF (types/locals) that
# debug=2 emits across the whole dep closure. Repo-wide `cargo build`/`cargo
# test` artifacts stay lean. Do NOT strip — strip would delete the line tables.
debug = "line-tables-only"
strip = "none"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
strip = false
