# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed gRPC client for kvbm-service"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
hyper-util = { workspace = true }

# prost is consumed by the tonic-generated client code (build.rs -> tonic_build ->
# `tonic::include_proto!` in proto.rs); the generated messages derive prost::Message.
# cargo-machete cannot see into generated code, so this is a false positive.
[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
kvbm-service = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
