# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-common"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
dynamo-tokens = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"] }
serde_json = { workspace = true }
