# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-connector"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# Internal workspace crates
kvbm-common   = { workspace = true }
kvbm-config   = { workspace = true }
kvbm-engine   = { workspace = true }
kvbm-hub      = { workspace = true }
kvbm-logical  = { workspace = true }
kvbm-physical = { workspace = true }
kvbm-protocols = { workspace = true }

# Velo (git crates — mapped from dynamo_nova / dynamo_nova_backend)
velo        = { workspace = true }

# Dynamo crates
dynamo-memory = { workspace = true }
dynamo-tokens = { workspace = true }

# External
anyhow         = { workspace = true }
prometheus     = { workspace = true }
bytes          = { workspace = true }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
futures        = { workspace = true }
parking_lot    = { workspace = true }
serde          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
serde_json     = { workspace = true }
# KV-index hub publisher (capability probe + ZMQ PUB egress)
reqwest        = { workspace = true }
tmq            = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
insta = { version = "1.41", features = ["json", "redactions"] }
rstest = "0.23"
proptest = "1.5.0"
tempfile = { workspace = true }
libc = { workspace = true }
serial_test = "3"

[features]
default = ["testing"]
static-kernels = ["kvbm-physical/static-kernels"]
testing = [
    "kvbm-engine/testing",
    "kvbm-logical/testing",
    "kvbm-physical/testing",
]
# Opt-in: gates tests that build a real TestConnectorInstance/Cluster, which
# require a working NIXL/UCX runtime and CUDA device memory. Pure `#[cfg]` gate
# (no deps) — the harness it uses comes from the default-on `testing` feature.
# Non-default so the CPU pre-merge job (`cargo test --all-targets`) skips them;
# run them in the GPU job via `cargo test -p kvbm-connector --features testing-nixl`.
testing-nixl = []
# Enables the KVBM-owned NCCL communicator used for replicated MLA G1.
nccl = ["kvbm-engine/collectives"]
# Opt-in S3 object-storage integration tests against MinIO.
# Forwards to kvbm-engine/s3 so the S3ObjectBlockClient surface is available.
s3 = ["kvbm-engine/s3"]
