# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kvbm-common = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
temp-env = { version = "0.3.6" }

[features]
default = []
server = []
